Fixed gap (CSS)
Fixed gap between search form and city name (CSS)

--- a/src/styles.css
+++ b/src/styles.css
@@ -109,6 +109,10 @@ ul {
   opacity: 0.8;
   font-size: 15px;
 }
+#search-form {
+  padding-bottom: 2px;
+}
+
 #search-input {
   border-radius: 2%;
   border-width: 0.5px;
